# BlueZExploration

./: .gitignore  CMakeLists.txt  README.md
deviceScan/: CMakeLists.txt  deviceScan.cxx  deviceScan.h
libfoo/: foo.cxx  foo.h
rfcommSocket/: CMakeLists.txt
rfcommSocket/include/: rfcommSocket.h
test/testRfcommSocket/: .gitignore  CMakeLists.txt  testRfcommSocket  testRfcommSocket.cxx  testRfcommSocket.h
test/testfoo/: CMakeLists.txt  testfoo  testfoo.cxx  testfoo.h
